--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body{
     padding: 10px;
 }
+.bananaBox {
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -9999;
+}
